@@ -48,6 +48,12 @@ This project adheres to [[http://semver.org][Semantic Versioning]].
    Make the foreground and background color on the =diff-hl-change=,
    =diff-hl-add= and =diff-hl-remove= the same.
 
+** CHANGED the top 3 Org heading faces
+
+   Make the =org-level-1=, =org-level-2= and =org-level-3= stand out
+   more by giving them and underline, bold weight and italic slant
+   respectively.
+
 ** REMOVED the 10th rainbow delimiters depth face
 
 * [[https://github.com/ryuslash/yoshi-theme/compare/v6.0.0...v6.1.0][6.1.0]] -- 2015-11-20
